--- a/Martify/Resources/XAML/MainResource.xaml
+++ b/Martify/Resources/XAML/MainResource.xaml
@@ -6,6 +6,7 @@
     <ViewModels:MainVM x:Key="MainVM"></ViewModels:MainVM>
     <ViewModels:LoginVM x:Key="LoginVM"></ViewModels:LoginVM>
     <ViewModels:DashboardVM x:Key="DashboardVM"></ViewModels:DashboardVM>
+    <ViewModels:ProductSelectionVM x:Key="ProductSelectionVM"></ViewModels:ProductSelectionVM>
     <ViewModels:ProductsVM x:Key="ProductsVM"></ViewModels:ProductsVM>
     <ViewModels:EmployeeVM x:Key="EmployeeVM"></ViewModels:EmployeeVM>
     <ViewModels:AddEmployeeVM x:Key="AddEmployeeVM"></ViewModels:AddEmployeeVM>
