--- a/Martify/Views/AddEmployee.xaml
+++ b/Martify/Views/AddEmployee.xaml
@@ -248,7 +248,8 @@
                             Style="{StaticResource MaterialDesignRaisedButton}"
                             Command="{Binding SelectImageCommand}"
                             CommandParameter="{Binding ElementName=addEmployeeWindow}" 
-                            BorderBrush="{x:Null}" Foreground="{x:Null}">
+                            BorderBrush="{x:Null}" Foreground="{x:Null}"
+                            IsTabStop="False">
                         <Button.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                 <GradientStop Color="#FFD3CECE"/>
