--- a/Martify/Views/WindowControl.xaml
+++ b/Martify/Views/WindowControl.xaml
@@ -8,7 +8,8 @@
               xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             Name="ucWindowControl">
+             Name="ucWindowControl"
+             d:Style="{x:Null}">
     <UserControl.Resources>
         <Style x:Key="CompletelyCustomButtonStyle" TargetType="Button">
             <Setter Property="Template">
